--- a/redis-statefulset.yaml
+++ b/redis-statefulset.yaml
@@ -56,7 +56,7 @@ spec:
             command:
             - sh
             - -c
-            - "/opt/redis/redis-cli -h $(hostname) ping"
+            - "/usr/local/bin/redis-cli -h $(hostname) ping"
           initialDelaySeconds: 15
           timeoutSeconds: 5
       volumes:
