fix redis configmap config file writing

--- a/redis-statefulset.yaml
+++ b/redis-statefulset.yaml
@@ -17,14 +17,15 @@ spec:
             "command": ["bash", "-c", "
               set -ex\n
               [[ `hostname` =~ -([0-9]+)$ ]] || exit 1\n
+              [[ -f /mnt/conf/redis.conf ]] && exit 0\n
               ordinal=${BASH_REMATCH[1]}\n
               # Copy appropriate conf.d files from config-map to emptyDir.\n
               cp /mnt/config-map/shared.conf /mnt/conf/redis.conf\n
               # ordinal 0 is the first host\n
               if [[ $ordinal -eq 0 ]]; then\n
-                cat /mnt/config-map/master.conf > /mnt/conf/redis.conf\n
+                cat /mnt/config-map/master.conf >> /mnt/conf/redis.conf\n
               else\n
-                cat /mnt/config-map/slave.conf > /mnt/conf/redis.conf\n
+                cat /mnt/config-map/slave.conf >> /mnt/conf/redis.conf\n
               fi\n
             "],
             "volumeMounts": [
